# Bardify

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLI.md  Dockerfile  INSTALL_CLI.sh  README.md  SETUP.md  cache.py  cli.py  config.py  counters.py  frontend_app.jsx  logging_config.py  main.py  pyproject.toml  requirements.txt  test_api.py  test_cli.sh  transformer.py  tts.py
.github/workflows/: test.yml
frontend/: .env.example  .gitignore  .vercelignore  DEPLOY.md  package-lock.json  package.json  vercel.json
frontend/public/: index.html  manifest.json  service-worker.js
frontend/src/: App.css  App.jsx  App.test.jsx
tests/: conftest.py  test_cache.py  test_main.py  test_transformer.py  test_tts.py
